--- a/xebia-ios/MainStoryboard.storyboard
+++ b/xebia-ios/MainStoryboard.storyboard
@@ -11,7 +11,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="tags" title="Tags" id="2" customClass="RKWPTagTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="4CG-gz-erm" userLabel="TagTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -49,6 +49,7 @@
                             <outlet property="delegate" destination="2" id="atB-3X-EM8"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Tags" image="15-tags.png" id="7lg-Ws-daY"/>
                     <navigationItem key="navigationItem" title="Tags" id="DxH-MZ-HDT"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                 </viewController>
@@ -61,7 +62,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Hj-EB-cYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="iLd-vX-UPL" customClass="PostTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="P74-ov-t7C" userLabel="PostTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -110,7 +111,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hpj-iw-hPV" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="nSK-wZ-QT8" userLabel="DetailView" customClass="DetailPostViewController" sceneMemberID="viewController">
                     <webView key="view" contentMode="scaleToFill" id="4Cf-yf-NO0" userLabel="DetailPostWebView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </webView>
@@ -152,7 +153,48 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="-1390" y="-1056"/>
+            <point key="canvasLocation" x="-2390" y="-1056"/>
+        </scene>
+        <!--Blog Controller - Blog-->
+        <scene sceneID="6aQ-EH-2PY">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5DC-9O-Mv7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tabBarController storyboardIdentifier="tbBlog" title="Blog" definesPresentationContext="YES" id="Vyp-G8-uaq" customClass="BlogController" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="J0f-jd-nxz">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="JYX-cc-v04" kind="relationship" relationship="viewControllers" id="Ckt-H2-MNZ"/>
+                        <segue destination="SUX-yb-Q4Z" kind="relationship" relationship="viewControllers" id="br9-NG-at6"/>
+                        <segue destination="2" kind="relationship" relationship="viewControllers" id="YXf-EU-EYB"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="-1934" y="-1056"/>
+        </scene>
+        <!--Home Controller-->
+        <scene sceneID="Tje-CE-REG">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oCo-2c-b5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="home" id="040-yt-iWb" customClass="HomeController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j7e-AS-CoQ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="center" image="xebia-logo-transparent.png" id="Qn2-8q-Wkj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-1934" y="-470"/>
         </scene>
         <!--Category Table View Controller - Categories-->
         <scene sceneID="IWO-Ag-9mP">
@@ -160,7 +202,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GBE-jb-gW5" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="categories" title="Categories" id="SUX-yb-Q4Z" customClass="RKWPCategoryTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YH1-H9-lDH" userLabel="CategoryTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -198,6 +240,7 @@
                             <outlet property="delegate" destination="SUX-yb-Q4Z" id="g0W-GU-MDC"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Categories" image="44-shoebox.png" id="8NF-si-mfB"/>
                     <navigationItem key="navigationItem" title="Categories" id="m4N-Fb-2EW"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                 </viewController>
@@ -210,7 +253,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2i-bh-h4y" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="authors" title="Authors" id="JYX-cc-v04" customClass="RKWPAuthorTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6ZC-wv-Qw6" userLabel="AuthorTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -241,6 +284,7 @@
                             <outlet property="delegate" destination="JYX-cc-v04" id="WyD-Ag-aXt"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Authors" image="112-group.png" id="pN9-j9-fz1"/>
                     <navigationItem key="navigationItem" title="Authors" id="02C-YL-AVM"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                 </viewController>
@@ -248,6 +292,41 @@
             <point key="canvasLocation" x="-881" y="-340"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="112-group.png" width="32" height="21"/>
+        <image name="15-tags.png" width="24" height="25"/>
+        <image name="44-shoebox.png" width="24" height="22"/>
+        <image name="xebia-logo-transparent.png" width="240" height="80"/>
+    </resources>
+    <classes>
+        <class className="BlogController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogController.h"/>
+        </class>
+        <class className="DetailPostViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailPostViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="HomeController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeController.h"/>
+        </class>
+        <class className="PostTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostTableViewController.h"/>
+        </class>
+        <class className="RKWPAuthorTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPAuthorTableViewController.h"/>
+        </class>
+        <class className="RKWPCategoryTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPCategoryTableViewController.h"/>
+        </class>
+        <class className="RKWPMenuTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPMenuTableViewController.h"/>
+        </class>
+        <class className="RKWPTagTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPTagTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
