--- a/xebia-ios/MainStoryboard.storyboard
+++ b/xebia-ios/MainStoryboard.storyboard
@@ -175,11 +175,11 @@
             </objects>
             <point key="canvasLocation" x="-1934" y="-1056"/>
         </scene>
-        <!--Home Controller-->
+        <!--Home Controller - Home-->
         <scene sceneID="Tje-CE-REG">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oCo-2c-b5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="home" id="040-yt-iWb" customClass="HomeController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="home" title="Home" id="040-yt-iWb" customClass="HomeController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="j7e-AS-CoQ">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -298,35 +298,6 @@
         <image name="44-shoebox.png" width="24" height="22"/>
         <image name="xebia-logo-transparent.png" width="240" height="80"/>
     </resources>
-    <classes>
-        <class className="BlogController" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogController.h"/>
-        </class>
-        <class className="DetailPostViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailPostViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="HomeController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeController.h"/>
-        </class>
-        <class className="PostTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostTableViewController.h"/>
-        </class>
-        <class className="RKWPAuthorTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPAuthorTableViewController.h"/>
-        </class>
-        <class className="RKWPCategoryTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPCategoryTableViewController.h"/>
-        </class>
-        <class className="RKWPMenuTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPMenuTableViewController.h"/>
-        </class>
-        <class className="RKWPTagTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPTagTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
